-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 13.0.0
-
None
-
-
77d7106b3 (master)
I have a VirtualBox running Ubuntu 22.04 that provides a Samba network drive (Y:) to the host Windows system.
My Creator started on the Windows host hangs several seconds on startup and then on several operations (accessing File menu, opening Project, opening Locator, gaining focus, ...) whenever the virtual machine is not running and therefore the network drive is not available.
A Creator started with `-tcs` does not have the problem, so I guess I once opened a file or project from this network drive. However, this problem is hard to debug and could affect everybody working on network drives.
A profile log of the startup is attached.
Do you have suggestions for further debugging?
| For Gerrit Dashboard: QTCREATORBUG-30681 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 555024,4 | Update recent projects asynchronously | master | qt-creator/qt-creator | Status: MERGED | +2 | +1 |